fix: prevent wrap for table head cells

--- a/packages/react-components/src/components/table/table-head-cell/table-head-cell.module.css
+++ b/packages/react-components/src/components/table/table-head-cell/table-head-cell.module.css
@@ -45,6 +45,7 @@
     justify-content: flex-start;
     text-align: var(--text-align, start);
     font-weight: token(--font-weight-bold);
+    white-space: nowrap;
   }
 }
 @layer overrides {
